--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   cached_network_image: ^3.4.1
   go_router: ^16.3.0
   get_it: ^9.0.5
+  flutter_bloc: ^9.1.1
+  equatable: ^2.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
